spacing fixes

--- a/_src/_assets/styles/bigchain/_content-page.scss
+++ b/_src/_assets/styles/bigchain/_content-page.scss
@@ -12,7 +12,7 @@
         padding-bottom: ($spacer * 4);
     }
 
-    p:first-child {
+    > p:first-child {
         @extend .lead;
         margin-bottom: ($spacer * 2);
     }
