--- a/_src/_assets/styles/bigchain/_forms.scss
+++ b/_src/_assets/styles/bigchain/_forms.scss
@@ -101,6 +101,12 @@
     position: relative;
     // make room for floating labels
     margin-top: $spacer;
+
+    &:last-of-type {
+        .btn {
+            margin-top: $spacer;
+        }
+    }
 }
 
 
